Correct overflow
Change overflow from hidden to scroll

--- a/Design-Select-main/style.css
+++ b/Design-Select-main/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:wght@300;500;700;900&display=swap');
 
 body {
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .hero-image {
